feat: make the page layout and write the chapters about, education, skills. Add CSS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Denis Shvarts</title>
+    <script defer src="/index.js"></script>
     <link rel="stylesheet" href="/index.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
+    <title>Denis Shvarts</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header class="header">
+          <section class="full-name">
+            <span class="first-name">Denis</span> 
+            <span class="last-name">Shvarts</span>
+          </section>
+          <section class="contact-info">
+            <span class="email">Email: </span>
+            <span class="email-val">ShvartsDenisA@gmail.com</span>
+            <span class="separator"></span>
+            <span class="phone">Phone: </span>
+            <span class="phone-val">+972 58 778 39 60</span>
+          </section>
+          <section class="about">
+            <span class="position">Front-End Developer </span>
+            <span class="desc">
+              I am a front-end developer with more than 1 year of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
+            </span>
+          </section>
+        </header>
+        <main class="main">
+            <section class="section">
+                <div class="section__title">Education</div>
+                <div class="section__list">
+                    <div class="section__list-item">
+                        <div class="left">
+                            <div class="name">The Rolling Scopes School</div>
+                            <div class="addr">Iseael, Haifa</div>
+                            <div class="duration">Dec 2022 - Sep 2023</div>
+                        </div>
+                        <div class="central">
+                            <a href="https://drive.google.com/file/d/1joU0Z_fzlV2lgH9ktU8Kdu-1uPu6NJOl/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                        </div>
+                        <div class="right">
+                            <div class="name">Front-end developer</div>
+                        </div>
+                    </div>
+                    <div class="section__list-item">
+                        <div class="left">
+                            <div class="name">IT-logia</div>
+                            <div class="addr">Russia, Moscow</div>
+                            <div class="duration">Sep 2022 - Feb 2023</div>
+                        </div>
+                        <div class="central">
+                            <a href="https://drive.google.com/file/d/1O0XRhgaQtMsRIO-5GZD6uAaLF2I3F2x9/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                        </div>
+                        <div class="right">
+                            <div class="name">Junior Front-end developer</div>
+                        </div>
+                    </div>
+                    <div class="section__list-item">
+                        <div class="left">
+                            <div class="name">Olga Nasina’s “School for beginner testers”</div>
+                            <div class="addr">Russia, Moscow</div>
+                            <div class="duration">Sep 2022 - Dec 2022</div>
+                        </div>
+                        <div class="central">
+                            <a href="https://drive.google.com/file/d/1bSyLGWZkZ9d1BBNJ42HxmpJdapsd7cPi/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                        </div>
+                        <div class="right">
+                            <div class="name">QA engineer</div>
+                        </div>
+                    </div>
+                    <div class="section__list-item">
+                        <div class="left">
+                            <div class="name">State Musical and Pedagogical Institute named after M.M. Ippolitova-Ivanov</div>
+                            <div class="addr">Russia, Moscow</div>
+                            <div class="duration">Sep 2015 - Jun 2022</div>
+                        </div>
+                        <div class="central">
+                            <a href="https://drive.google.com/file/d/1wBINvjY2GF2EpmF1tPZ8mrbSm-GBGZ9X/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                        </div>
+                        <div class="right">
+                            <div class="name">Master's degree</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+           <section class="section">
+                <div class="section__title">Projects</div> 
+                <div class="section__list">
+                    <div class="section__list-item">
+                        <div class="name"></div>
+                        <div class="text"></div>
+                    </div>
+                    <div class="section__list-item">
+                        <div class="name"></div>
+                        <div class="text"></div>
+                    </div>
+                </div>
+            </section>
+           <div class="section">
+             <div class="section__title">Skills</div>
+             <div class="skills">
+               <div class="skills__item">
+                 <p class="skill">HTML5</p>
+                 <p class="skill">CSS</p>
+                 <p class="skill">OOP</p>
+                 <p class="skill">Git</p>
+                 <p class="skill">GitHub</p>
+                 <p class="skill">SQL</p>
+                 <p class="skill">Figma</p>
+                 <p class="skill">Responsive web design</p>
+                 <p class="skill">Adaptive web design</p>
+                 <p class="skill">JavaScript(ES5, ES6)</p>
+                 <p class="skill">Exploratory testing</p>
+                 <p class="skill">Pixel Perfect</p>
+                 <p class="skill">Photoshop</p>
+               </div>
+             </div>
+            </div>
+           <div class="section">
+           <div class="section__title">
+             Interests
+             </div>
+             <div class="section__list">
+               <div class="section__list-item">
+                </div>
+             </div>
+           </div>
+        </main>
+    </div>
 </body>
 </html>
