feat: add projects and social

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <div class="duration">Dec 2022 - Sep 2023</div>
                         </div>
                         <div class="central">
-                            <a href="https://drive.google.com/file/d/1joU0Z_fzlV2lgH9ktU8Kdu-1uPu6NJOl/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                            <a class="certificate" href="https://drive.google.com/file/d/1joU0Z_fzlV2lgH9ktU8Kdu-1uPu6NJOl/view?usp=sharing" target="_blank">view document</a>
                         </div>
                         <div class="right">
                             <div class="name">Front-end developer</div>
@@ -53,7 +53,7 @@
                             <div class="duration">Sep 2022 - Feb 2023</div>
                         </div>
                         <div class="central">
-                            <a href="https://drive.google.com/file/d/1O0XRhgaQtMsRIO-5GZD6uAaLF2I3F2x9/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                            <a class="certificate" href="https://drive.google.com/file/d/1O0XRhgaQtMsRIO-5GZD6uAaLF2I3F2x9/view?usp=sharing" target="_blank">view document</a>
                         </div>
                         <div class="right">
                             <div class="name">Junior Front-end developer</div>
@@ -66,7 +66,7 @@
                             <div class="duration">Sep 2022 - Dec 2022</div>
                         </div>
                         <div class="central">
-                            <a href="https://drive.google.com/file/d/1bSyLGWZkZ9d1BBNJ42HxmpJdapsd7cPi/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                            <a class="certificate" href="https://drive.google.com/file/d/1bSyLGWZkZ9d1BBNJ42HxmpJdapsd7cPi/view?usp=sharing" target="_blank">view document</a>
                         </div>
                         <div class="right">
                             <div class="name">QA engineer</div>
@@ -79,7 +79,7 @@
                             <div class="duration">Sep 2015 - Jun 2022</div>
                         </div>
                         <div class="central">
-                            <a href="https://drive.google.com/file/d/1wBINvjY2GF2EpmF1tPZ8mrbSm-GBGZ9X/view?usp=sharing" target="_blank" class="certificate">view document</a>
+                            <a class="certificate" href="https://drive.google.com/file/d/1wBINvjY2GF2EpmF1tPZ8mrbSm-GBGZ9X/view?usp=sharing" target="_blank">view document</a>
                         </div>
                         <div class="right">
                             <div class="name">Master's degree</div>
@@ -90,13 +90,29 @@
            <section class="section">
                 <div class="section__title">Projects</div> 
                 <div class="section__list">
-                    <div class="section__list-item">
-                        <div class="name"></div>
-                        <div class="text"></div>
+                    <div class="section__list-item projects">
+                        <a class="project name" href="https://illbeblack.github.io/cars-app/#cars" target="_blank">Car rental website "Luxorides"</a>
+                        <p class="text">The site is a landing page where you can get acquainted with the company’s fleet and book the car you are interested in. HTML5, CSS3, JavaScript and Angular were used to create the site.</p>
                     </div>
-                    <div class="section__list-item">
-                        <div class="name"></div>
-                        <div class="text"></div>
+                    <div class="section__list-item projects">
+                        <p class="text">The site is a landing page of banking app where user can get information about bank. HTML5, CSS3, JavaScript were used to create the site.</p>
+                        <a class="project name" href="https://illbeblack.github.io/easy-bank-landing/" target="_blank">Website of bank app "Easy Bank"</a>
+                    </div>
+                    <div class="section__list-item projects">
+                        <a class="project name" href="https://illbeblack.github.io/easy-bank/" target="_blank">Web Banking App "Easy Bank"</a>
+                        <p class="text">This online banking web application allows the user to see their transactions, filter them, as well as transfer money, request a loan and close an account.HTML5, CSS3, JavaScript were used to create the site. Use <a href="https://docs.google.com/document/d/1-gxp3ppYvppdZiw0QmfmMw9uWJMQwyGRGiF3w20BJv8/edit?usp=sharing" target="_blank">-INFO-</a> to test application.</p>
+                    </div>
+                    <div class="section__list-item projects">
+                        <p class="text">This web application is created entirely using JavaScript and duplicates a regular keyboard, displaying the keys pressed or using the mouse for input. CSS3, JavaScript were used to create the site.</p>
+                        <a class="project name" href="https://illbeblack.github.io/virtual-keyboard/" target="_blank">Website app "Virtual Keyboard"</a>
+                    </div>
+                    <div class="section__list-item projects">
+                        <a class="project name" href="https://illbeblack.github.io/dice-game/" target="_blank">Website game "DICE"</a>
+                        <p class="text">The goal of the game is to roll the dice to score 100 points. A move is a series of throws and consists of the following: the player throws the die an unlimited number of times and adds up the values ​​that appear. However, if a one is rolled, the entire amount accumulated during the turn is canceled and the turn passes to the next player. The player can end his turn at any time. All players are entitled to the same number of moves.</p>
+                    </div>
+                    <div class="section__list-item projects">
+                        <p class="text">You have to guess the number from 1 to 20. The task is to do it in the least number of attempts.</p>
+                        <a class="project name" href="https://illbeblack.github.io/guess_the_number_game/" target="_blank">Website game "Guess the number"</a>
                     </div>
                 </div>
             </section>
@@ -122,10 +138,15 @@
             </div>
            <div class="section">
            <div class="section__title">
-             Interests
+             Social Contacts
              </div>
              <div class="section__list">
                <div class="section__list-item">
+                <a class="social" href="https://www.linkedin.com/in/denis-shvarts-051081275/" target="_blank"><img src="./icons/LinkedIn.svg" alt="LinkedIn"></a>
+                <a class="social" href="https://github.com/Illbeblack" target="_blank"><img src="./icons/Github.svg" alt="GitHub"></a>
+                <a class="social" href="https://discordapp.com/users/kelestian/" target="_blank"><img src="./icons/discord.svg" alt="Discord"></a>
+                <a class="social" href="https://t.me/ShvartsDenis" target="_blank"><img src="./icons/Telegram.svg" alt="Telegram"></a>
+                <a class="social" href="https://www.instagram.com/invites/contact/?i=1vabt2lz6jyds&utm_content=r6wcku9" target="_blank"><img src="./icons/Instagram.svg" alt="Instagram"></a>
                 </div>
              </div>
            </div>
