--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/index.js"></script>
-    <link rel="stylesheet" href="/index.css">
+    <script defer src="./index.js"></script>
+    <link rel="stylesheet" href="./index.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
     <title>Denis Shvarts</title>
 </head>
@@ -153,4 +153,4 @@
         </main>
     </div>
 </body>
-</html>
+</html
