feat: add information about my work as tester

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
                         <p class="text">You have to guess the number from 1 to 20. The task is to do it in the least number of attempts.</p>
                         <a class="project name" href="https://illbeblack.github.io/guess_the_number_game/" target="_blank">Website game "Guess the number"</a>
                     </div>
+                    <div class="section__list-item projects">
+                        <a class="project name" href="https://drive.google.com/drive/folders/18eX09LoAUHtQJPr1dzVJZZxH44WztO9N?usp=sharing" target="_blank">Testing the Wildberries website</a>
+                        <p class="text">The document presents my checklists, test cases, bug reports that I've made when testing the Wildberries website in Russian and English.</p>
+                    </div>
                 </div>
             </section>
            <div class="section">
