feat: add information about work experience and more about me

--- a/index.html
+++ b/index.html
@@ -24,12 +24,93 @@
           </section>
           <section class="about">
             <span class="position">Front-End Developer </span>
-            <span class="desc">
-              I am a front-end developer with more than 1 year of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
-            </span>
           </section>
         </header>
         <main class="main">
+            <section class="section">
+                <div class="section__title">Work Experience</div>
+                <div class="section__list">
+                    <div class="section__work-item">
+                        <div class="job">
+                            <div class="name">The Rolling Scopes School</div>
+                            <div class="addr">Iseael, Haifa</div>
+                            <div class="duration">Dec 2022 - Sep 2023</div>
+                        </div>
+                        <div class="background">
+                            <p class="profession">Front-end developer</p>
+                            <ul class="name">Skills
+                                <li>HTML5</li>
+                                <li>CSS</li>
+                                <li>Git</li>
+                                <li>GitHub</li>
+                                <li>JavaScript(ES5, ES6)</li>
+                            </ul>
+                            <ul class="name">Result
+                                <li>Implementation of the project "EasyBank" - online banking web application allows the user to see their transactions, filter them, as well as transfer money, request a loan and close an account</li>
+                                <li>Uses deep knowledge and understanding of the operating principles of HTML5, DOM, CSS3, JavaScript</li>
+                                <li><a href="#projecktWork">For more information make a click here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="section__work-item">
+                        <div class="job">
+                            <div class="name">Haifa Simphony Orchestra</div>
+                            <div class="addr">Israel, Haifa</div>
+                            <div class="duration">Sep 2022 - Jul 2022</div>
+                        </div>
+                        <div class="background">
+                            <p class="profession">Principal Trumpet</p>
+                            <ul class="name">Experience
+                                <li>Led a group of musicians</li>
+                                <li>Adapt to new challenges every week</li>
+                                <li>Frequent public appearances</li>
+                            </ul>
+                            <ul class="name">Achievements
+                                <li>Acquired high resistance to stress and the ability to work in difficult conditions</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="section__work-item">
+                        <div class="job">
+                            <div class="name">International Charitable Foundation "Children and Music"</div>
+                            <div class="addr">Russia, Moscow</div>
+                            <div class="duration">Sep 2019 - Jul 2022</div>
+                        </div>
+                        <div class="background">
+                            <p class="profession">Director</p>
+                            <ul class="name">Experience
+                                <li>Maintaining reporting documentation</li>
+                                <li>Distribution of funds and forces of the fund, setting priorities</li>
+                                <li>Organization and implementation of charitable projects</li>
+                            </ul>
+                            <ul class="name">Achievements
+                                <li>Organized dozens of charity projects that helped hundreds of people</li>
+                                <li>Systematized documentation, distributed the responsibilities of employees and improved the financial performance of the fund by 40%</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="section__work-item">
+                        <div class="job">
+                            <div class="name">College of music-theatre art named G. Vishnevskaya</div>
+                            <div class="addr">Russia, Moscow</div>
+                            <div class="duration">Sep 2015 - Jul 2022</div>
+                        </div>
+                        <div class="background">
+                            <p class="profession">Orchestra conductor / Techer</p>
+                            <ul class="name">Experience
+                                <li>Management of a team of 30+ people</li>
+                                <li>Choosing a direction of work</li>
+                                <li>Resolving complex conflict situations</li>
+                            </ul>
+                            <ul class="name">Achievements
+                                <li>Developed a training manual</li>
+                                <li>Systematized documentation</li>
+                                <li>Implementation of comfortable working conditions</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="section">
                 <div class="section__title">Education</div>
                 <div class="section__list">
@@ -99,7 +180,7 @@
                         <a class="project name" href="https://illbeblack.github.io/easy-bank-landing/" target="_blank">Website of bank app "Easy Bank"</a>
                     </div>
                     <div class="section__list-item projects">
-                        <a class="project name" href="https://illbeblack.github.io/easy-bank/" target="_blank">Web Banking App "Easy Bank"</a>
+                        <a class="project name" id="projecktWork" href="https://illbeblack.github.io/easy-bank/" target="_blank">Web Banking App "Easy Bank"</a>
                         <p class="text">This online banking web application allows the user to see their transactions, filter them, as well as transfer money, request a loan and close an account.HTML5, CSS3, JavaScript were used to create the site. Use <a href="https://docs.google.com/document/d/1-gxp3ppYvppdZiw0QmfmMw9uWJMQwyGRGiF3w20BJv8/edit?usp=sharing" target="_blank">-INFO-</a> to test application.</p>
                     </div>
                     <div class="section__list-item projects">
@@ -126,7 +207,13 @@
                <div class="skills__item">
                  <p class="skill">HTML5</p>
                  <p class="skill">CSS</p>
+                 <p class="skill">
+                    Object-Oriented Programming (OOP)</p>
+                 <p class="skill">DOM</p>
                  <p class="skill">OOP</p>
+                 <p class="skill">OOP</p>
+                 <p class="skill">
+                    User Experience (UX)</p>
                  <p class="skill">Git</p>
                  <p class="skill">GitHub</p>
                  <p class="skill">SQL</p>
@@ -140,6 +227,23 @@
                </div>
              </div>
             </div>
+            <section class="section">
+                <div class="section__title">
+                    About Me
+                </div>
+                <div class="section__list about">
+                    <span class="desc">
+                        The IT sector is growing very rapidly and I want to grow up with it. 
+                        I made my choice in favor of front-end development because I like the opportunity to implement a variety of projects, 
+                        from a beautiful website to a complex application. Finding myself in Israel, which is undoubtedly the IT capital, and having met people from this field, 
+                        I wanted to become part of this magnificent community.
+                    </span>
+                    <span class="desc">
+                        I am a front-end developer with more than 1 year of experience writing html, css, and js. 
+                        I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
+                    </span> 
+                </div>   
+            </section>
            <div class="section">
            <div class="section__title">
              Social Contacts
