feat: add underline to separate blocks

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           </section>
           <section class="about">
             <span class="position">Front-End Developer </span>
+            <span class="underLine"></span>
           </section>
         </header>
         <main class="main">
@@ -46,7 +47,7 @@
                                 <li>JavaScript(ES5, ES6)</li>
                             </ul>
                             <ul class="name">Result
-                                <li>Implementation of the project "EasyBank" - online banking web application allows the user to see their transactions, filter them, as well as transfer money, request a loan and close an account</li>
+                                <li>Implementation of the project "EasyBank" - online banking web application allows users to see their transactions, filter them, as well as transfer money, request a loan and close an account</li>
                                 <li>Uses deep knowledge and understanding of the operating principles of HTML5, DOM, CSS3, JavaScript</li>
                                 <li><a href="#projecktWork">For more information make a click here</a></li>
                             </ul>
@@ -181,7 +182,7 @@
                     </div>
                     <div class="section__list-item projects">
                         <a class="project name" id="projecktWork" href="https://illbeblack.github.io/easy-bank/" target="_blank">Web Banking App "Easy Bank"</a>
-                        <p class="text">This online banking web application allows the user to see their transactions, filter them, as well as transfer money, request a loan and close an account.HTML5, CSS3, JavaScript were used to create the site. Use <a href="https://docs.google.com/document/d/1-gxp3ppYvppdZiw0QmfmMw9uWJMQwyGRGiF3w20BJv8/edit?usp=sharing" target="_blank">-INFO-</a> to test application.</p>
+                        <p class="text">This online banking web application allows users to see their transactions, filter them, as well as transfer money, request a loan and close an account.HTML5, CSS3, JavaScript were used to create the site. Use <a href="https://docs.google.com/document/d/1-gxp3ppYvppdZiw0QmfmMw9uWJMQwyGRGiF3w20BJv8/edit?usp=sharing" target="_blank">-INFO-</a> to test application.</p>
                     </div>
                     <div class="section__list-item projects">
                         <p class="text">This web application is created entirely using JavaScript and duplicates a regular keyboard, displaying the keys pressed or using the mouse for input. CSS3, JavaScript were used to create the site.</p>
