fix: change oop to skill

--- a/index.html
+++ b/index.html
@@ -208,15 +208,13 @@
                <div class="skills__item">
                  <p class="skill">HTML5</p>
                  <p class="skill">CSS</p>
-                 <p class="skill">
-                    Object-Oriented Programming (OOP)</p>
+                 <p class="skill">Object-Oriented Programming (OOP)</p>
                  <p class="skill">DOM</p>
-                 <p class="skill">OOP</p>
-                 <p class="skill">OOP</p>
-                 <p class="skill">
-                    User Experience (UX)</p>
+                 <p class="skill">User Experience (UX)</p>
                  <p class="skill">Git</p>
                  <p class="skill">GitHub</p>
+                 <p class="skill">Teamwork</p>
+                 <p class="skill">Analytical Skills</p>
                  <p class="skill">SQL</p>
                  <p class="skill">Figma</p>
                  <p class="skill">Responsive web design</p>
