refactor: refactor HTML

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                         </div>
                     </div>
                 </div>
+                <span class="underLine"></span>
             </section>
             <section class="section">
                 <div class="section__title">Education</div>
@@ -202,7 +203,7 @@
                     </div>
                 </div>
             </section>
-           <div class="section">
+           <section class="section">
              <div class="section__title">Skills</div>
              <div class="skills">
                <div class="skills__item">
@@ -225,7 +226,8 @@
                  <p class="skill">Photoshop</p>
                </div>
              </div>
-            </div>
+             <span class="underLine"></span>
+            </section>
             <section class="section">
                 <div class="section__title">
                     About Me
@@ -241,9 +243,9 @@
                         I am a front-end developer with more than 1 year of experience writing html, css, and js. 
                         I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
                     </span> 
-                </div>   
+                </div> 
             </section>
-           <div class="section">
+           <section class="section">
            <div class="section__title">
              Social Contacts
              </div>
@@ -256,7 +258,7 @@
                 <a class="social" href="https://www.instagram.com/invites/contact/?i=1vabt2lz6jyds&utm_content=r6wcku9" target="_blank"><img src="./icons/Instagram.svg" alt="Instagram"></a>
                 </div>
              </div>
-           </div>
+           </section>
         </main>
     </div>
 </body>
