fix: fix mistakes in html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="job">
                             <div class="name">Haifa Simphony Orchestra</div>
                             <div class="addr">Israel, Haifa</div>
-                            <div class="duration">Sep 2022 - Jul 2022</div>
+                            <div class="duration">Sep 2022 - Jul 2023</div>
                         </div>
                         <div class="background">
                             <p class="profession">Principal Trumpet</p>
@@ -97,7 +97,7 @@
                             <div class="duration">Sep 2015 - Jul 2022</div>
                         </div>
                         <div class="background">
-                            <p class="profession">Orchestra conductor / Techer</p>
+                            <p class="profession">Orchestra conductor / Teacher</p>
                             <ul class="name">Experience
                                 <li>Management of a team of 30+ people</li>
                                 <li>Choosing a direction of work</li>
