feat: change about section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="phone-val">+972 58 778 39 60</span>
           </section>
           <section class="about">
-            <span class="position">Front-End Developer </span>
+            <span class="position">QA Engineer / Front-End Developer </span>
             <span class="underLine"></span>
           </section>
         </header>
@@ -240,8 +240,8 @@
                         I wanted to become part of this magnificent community.
                     </span>
                     <span class="desc">
-                        I am a front-end developer with more than 1 year of experience writing html, css, and js. 
-                        I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
+                        I am a front-end developer and QA engineer with more than 1 year of experience working as freelance.
+                        I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
                     </span> 
                 </div> 
             </section>
