feat: add QA part to work experience

--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
                     </div>
                     <div class="section__work-item">
                         <div class="job">
+                            <div class="name">Wildberries</div>
+                            <div class="addr">Russia, Moscow (remote)</div>
+                            <div class="duration">Sep 2022 - Dec 2022</div>
+                        </div>
+                        <div class="background">
+                            <p class="profession">QA Engineer</p>
+                            <ul class="name">Skills
+                                <li>User Acceptance Testing</li>
+                                <li>Research and Development</li>
+                                <li>Manual Testing</li>
+                                <li>Test Planning</li>
+                                <li>Defining Requirements</li>
+                            </ul>
+                            <ul class="name">Result
+                                <li>While working in the company as a training project, bug reports were identified and compiled, as well as new features and improvements were proposed and implemented</li>
+                                <li>More detailed information about the project and the work done in the document at the link</li>
+                                <li><a href="https://drive.google.com/drive/folders/18eX09LoAUHtQJPr1dzVJZZxH44WztO9N" target="_blank">For more information make a click here</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="section__work-item">
+                        <div class="job">
                             <div class="name">Haifa Simphony Orchestra</div>
                             <div class="addr">Israel, Haifa</div>
                             <div class="duration">Sep 2022 - Jul 2023</div>
