feat: apdate info about me and skills

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="phone-val">+972 58 778 39 60</span>
           </section>
           <section class="about">
-            <span class="position">QA Engineer / Front-End Developer </span>
+            <span class="position">Front-End Developer </span>
             <span class="underLine"></span>
           </section>
         </header>
@@ -41,10 +41,16 @@
                             <p class="profession">Front-end developer</p>
                             <ul class="name">Skills
                                 <li>HTML5</li>
-                                <li>CSS</li>
+                                <li>CSS3</li>
+                                <li>JavaScript(ES5, ES6)</li>
+                                <li>Object-Oriented Programming</li>
+                                <li>AJAX</li>
+                                <li>DOM</li>
+                                <li>Responsive Web Design</li>
+                                <li>Adaptive Design</li>
+                                <li>Chrome DevTools</li>
                                 <li>Git</li>
                                 <li>GitHub</li>
-                                <li>JavaScript(ES5, ES6)</li>
                             </ul>
                             <ul class="name">Result
                                 <li>Implementation of the project "EasyBank" - online banking web application allows users to see their transactions, filter them, as well as transfer money, request a loan and close an account</li>
@@ -230,20 +236,24 @@
              <div class="skills">
                <div class="skills__item">
                  <p class="skill">HTML5</p>
-                 <p class="skill">CSS</p>
+                 <p class="skill">CSS3</p>
+                 <p class="skill">JavaScript(ES5, ES6)</p>
                  <p class="skill">Object-Oriented Programming (OOP)</p>
                  <p class="skill">DOM</p>
+                 <p class="skill">AJAX</p>
                  <p class="skill">User Experience (UX)</p>
-                 <p class="skill">Git</p>
-                 <p class="skill">GitHub</p>
-                 <p class="skill">Teamwork</p>
-                 <p class="skill">Analytical Skills</p>
-                 <p class="skill">SQL</p>
-                 <p class="skill">Figma</p>
                  <p class="skill">Responsive web design</p>
                  <p class="skill">Adaptive web design</p>
-                 <p class="skill">JavaScript(ES5, ES6)</p>
+                 <p class="skill">Chrome DevTools</p>
+                 <p class="skill">Git</p>
+                 <p class="skill">GitHub</p>
+                 <p class="skill">State Transition Testing</p>
+                 <p class="skill">Decision Table</p>
+                 <p class="skill">Manual Testing</p>
                  <p class="skill">Exploratory testing</p>
+                 <p class="skill">Teamwork</p>
+                 <p class="skill">Analytical Skills</p>
+                 <p class="skill">Figma</p>
                  <p class="skill">Pixel Perfect</p>
                  <p class="skill">Photoshop</p>
                </div>
@@ -256,15 +266,26 @@
                 </div>
                 <div class="section__list about">
                     <span class="desc">
-                        The IT sector is growing very rapidly and I want to grow up with it. 
-                        I made my choice in favor of front-end development because I like the opportunity to implement a variety of projects, 
-                        from a beautiful website to a complex application. Finding myself in Israel, which is undoubtedly the IT capital, and having met people from this field, 
-                        I wanted to become part of this magnificent community.
+                        I am a front-end developer with more than 1 year of experience working as a freelancer. 
+                        I'm motivated and result-focused.
                     </span>
                     <span class="desc">
-                        I am a front-end developer and QA engineer with more than 1 year of experience working as freelance.
-                        I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
-                    </span> 
+                        The IT sector is growing very rapidly and I want to grow with it. I made my choice
+                         in favor of front-end development because I like the opportunity to implement a 
+                         variety of projects, from a beautiful website to a complex application.
+                    </span>
+                    <span class="desc">
+                        After receiving higher education and moving to Israel in 2022, I continued my
+                        education in IT as a tester and front-end developer. During my studies I created
+                        several web pages, browser mini-games and applications, working as a freelancer
+                        and participating in various projects.
+                    </span>
+                    <span class="desc">
+                        Finding myself in Israel, which is undoubtedly the IT capital, and having met people 
+                        from this field, I wanted to become part of this magnificent community. 
+                        I am seeking employment with a company where I can use my ability to learn and use my 
+                        knowledge in development. I strive to gain new knowledge, improve in my profession and move forward!
+                    </span>
                 </div> 
             </section>
            <section class="section">
